# atmospheric-inverse-methods-for-flux-optimization

./: .buildinfo  .gitignore  .pylintrc  .travis.yml  .zenodo.json  CITATION.cff  LICENSE.txt  MANIFEST.in  PSU Open Source Software License Agreement.docx  README.rst  atmos_flux_inversion.correlations.html  atmos_flux_inversion.covariances.html  atmos_flux_inversion.html  atmos_flux_inversion.linalg.html  atmos_flux_inversion.noise.html  atmos_flux_inversion.optimal_interpolation.html  atmos_flux_inversion.psas.html  atmos_flux_inversion.util.html  atmos_flux_inversion.variational.html  atmos_flux_inversion.wrapper.html  bayes.html  best_linear_unbiased_estimator.html  flux_representation.html  generalized_least_squares.html  genindex.html  index.html  influence_functions.html  inverse_problems.html  inversion.correlations.html  inversion.covariances.html  inversion.html  inversion.linalg.html  inversion.noise.html  inversion.observation_operator.html  inversion.optimal_interpolation.html  inversion.psas.html  inversion.remapper.html  inversion.util.html  inversion.variational.html  inversion.wrapper.html  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pythondocs.yml  pythonpackage.yml
JAMES2019/: plot_temporal_covariances.py  results_analysis.py  run_inversion_osse.py
_modules/: atmos_flux_inversion.html  index.html  inversion.html
_modules/atmos_flux_inversion/: correlations.html  covariances.html  linalg.html  noise.html  optimal_interpolation.html  psas.html  util.html  variational.html  wrapper.html
_modules/inversion/: correlations.html  covariances.html  linalg.html  noise.html  observation_operator.html  optimal_interpolation.html  psas.html  remapper.html  util.html  variational.html  wrapper.html
_sources/: atmos_flux_inversion.linalg.rst.txt  atmos_flux_inversion.psas.rst.txt  atmos_flux_inversion.util.rst.txt  atmos_flux_inversion.wrapper.rst.txt  bayes.rst.txt  best_linear_unbiased_estimator.rst.txt  index.rst.txt  inversion.correlations.rst.txt  inversion.covariances.rst.txt  inversion.noise.rst.txt  inversion.observation_operator.rst.txt  inversion.optimal_interpolation.rst.txt  inversion.remapper.rst.txt  inversion.rst.txt  inversion.variational.rst.txt  inversion.wrapper.rst.txt
_static/: documentation_options.js
doc/: Makefile
doc/source/: atmos_flux_inversion.correlations.rst  atmos_flux_inversion.covariances.rst  atmos_flux_inversion.noise.rst  atmos_flux_inversion.optimal_interpolation.rst  atmos_flux_inversion.rst  atmos_flux_inversion.variational.rst  best_linear_unbiased_estimator.rst  conf.py  flux_representation.rst  generalized_least_squares.rst  index.rst  influence_functions.rst  inverse_problems.rst  inversion.correlations.rst  inversion.covariance_estimation.rst  inversion.ensemble.hybrid.rst  inversion.ensemble.inflation.rst  inversion.ensemble.integrators.rst  inversion.ensemble.perturbed_observations_filter.rst  inversion.ensemble.rst  inversion.integrators.rst  inversion.linalg.rst  inversion.models.rst  inversion.noise.rst  inversion.optimal_interpolation.rst  inversion.osse.rst  inversion.psas.rst  inversion.rst  inversion.tests.rst  inversion.util.rst  inversion.variational.rst  mathematical_formalism.rst  maximum_likelihood.rst  modules.rst  theory.rst  user_guide.rst
examples/: analyze_osse.R  cf_acdd.py  flux_osse_all_systems.py  flux_osse_different_structure.py  flux_osse_fraternal_twin.py  flux_osse_identical_twin.py  flux_osse_same_obs_new_covariance.py  make_noisy_fluxes.py  month_inversion_kalman_filter.py  month_inversion_low_res.py  month_inversion_magic_dask.py  plot_temporal_covariances.py  results_analysis.py
homeworks/: homework_one.py  homework_three.py  homework_two.py
paper2020/: compare_prior_covariance_continental_values.py  results_analysis.py  run_inversion_osse.py
src/atmos_flux_inversion/: correlations.py  covariances.py  linalg.py  linalg_interface.py  noise.py  optimal_interpolation.py  psas.py  remapper.py  tests.py  util.py  variational.py  wrapper.py
src/inversion/: __init__.py  correlations.py  covariance_estimation.py  covariances.py  integrators.py  linalg.py  linalg_interface.py  models.py  noise.py  optimal_interpolation.py  osse.py  psas.py  remapper.py  tests.py  util.py  variational.py  wrapper.py
src/inversion/ensemble/: __init__.py  hybrid.py  inflation.py  integrators.py  perturbed_observations_filter.py
src/inversion/models/: __init__.py
src/inversion/tests/: __init__.py
